Kata 4,5,6,7
Se agregan las katas de la 4 a la 7, con sus respectivos test