@@ -1,13 +1,13 @@
 package katas;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import model.BoxArt;
 import model.MovieList;
 import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 
 /*
     Goal: Retrieve id, title, and a 150x200 box art url for every video
@@ -17,7 +17,15 @@ import java.util.Map;
 public class Kata4 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
-
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));
+        return movieLists.stream()
+                .flatMap(peliculas -> peliculas.getVideos().stream()
+                        .map(peli -> Map.of(
+                                "id", peli.getId(),
+                                "title", peli.getTitle(),
+                                "box", peli.getBoxarts().stream()
+                                        .filter(caja -> caja.getWidth() == 150 && caja.getHeight() == 200)
+                                        .collect(Collectors.toList()))))
+                .collect(Collectors.toList());
     }
 }
+
